--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -34,7 +34,9 @@
         <div class="navbar-fixed" id="nav">
             <nav class="deep-purple darken-4">
                 <div class="nav-wrapper container-nav">
-                    <a href="#" class="brand-logo">Animemaniatics</a>
+                    <a href="#" class="brand-logo">
+                        <img src="/src/app/assets/img/title_proyect1.4.png" alt="">
+                    </a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger" id="button"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="#">Sass</a></li>
