--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -32,15 +32,23 @@
     </div>
     <main class="content-first" id="contend">
         <div class="navbar-fixed" id="nav">
-            <nav class="deep-purple darken-4">
-                <div class="nav-wrapper container-nav">
+            <nav class="purple darken-4 container-nav">
+                <div class="nav-wrapper">
                     <a href="#" class="brand-logo">
-                        <img src="/src/app/assets/img/title_proyect1.4.png" alt="">
+                        <img src="/src/app/assets/img/logoproyect_ar1.4.png" class="nav-logo" alt="">
                     </a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger" id="button"><i class="material-icons">menu</i></a>
-                    <ul class="right hide-on-med-and-down">
+                    <ul class="right hide-on-med-and-down nav-menu">
                         <li><a href="#">Sass</a></li>
                         <li><a href="#">Components</a></li>
+                        <li>
+                            <div class="content-search">
+                                <div class="input-field">
+                                    <input id="search" type="search" required class="nav-area-search">
+                                    <label class="label-icon nav-button-search" for="search"><i class="material-icons">search</i></label>
+                                  </div>
+                            </div>
+                        </li>
                         <li><a href="#">Javascript</a></li>
                         <li><a href="#">Mobile</a></li>
                     </ul>
