--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -18,15 +18,17 @@
         </div>
         <div class="waiting-loader" id="loading2">
             <div class="preloader-wrapper big active">
-              <div class="spinner-layer spinner-blue-only">
-                <div class="circle-clipper left">
-                  <div class="circle"></div>
-                </div><div class="gap-patch">
-                  <div class="circle"></div>
-                </div><div class="circle-clipper right">
-                  <div class="circle"></div>
+                <div class="spinner-layer spinner-blue-only">
+                    <div class="circle-clipper left">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="gap-patch">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
                 </div>
-              </div>
             </div>
         </div>
     </div>
@@ -35,22 +37,22 @@
             <nav class="purple darken-4 container-nav">
                 <div class="nav-wrapper">
                     <a href="#" class="brand-logo">
-                        <img src="/src/app/assets/img/logoproyect_ar1.4.png" class="nav-logo" alt="">
+                        <img src="/src/app/assets/img/title_proyect_c.png" class="nav-logo" alt="">
                     </a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger" id="button"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down nav-menu">
-                        <li><a href="#">Sass</a></li>
-                        <li><a href="#">Components</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Anime repertoire</a></li>
                         <li>
                             <div class="content-search">
-                                <div class="input-field">
-                                    <input id="search" type="search" required class="nav-area-search">
-                                    <label class="label-icon nav-button-search" for="search"><i class="material-icons">search</i></label>
-                                  </div>
+                                <div class="input-field nav-area-search">
+                                    <input id="search" type="search" required class="" placeholder="Que buscas?">
+                                    <label class="label-icon" for="search"><i class="material-icons nav-button-search">search</i></label>
+                                </div>
                             </div>
                         </li>
-                        <li><a href="#">Javascript</a></li>
-                        <li><a href="#">Mobile</a></li>
+                        <li><a href="#"><i class="material-icons">person</i></a></li>
+                        <li><a href="#"><i class="material-icons">brightness_6</i></a></li>
                     </ul>
                 </div>
             </nav>
