--- a/src/app/assets/css/style-main.css
+++ b/src/app/assets/css/style-main.css
@@ -1,8 +1,3 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
-
 .content-first{
     
 }
@@ -28,41 +23,38 @@
     padding: 100px;
 }
 .container-nav{
-    padding: 0px 5% 0px 5%;
+    padding: 0px 4% 0px 4%;
     height: 12vh;
 }
 .nav-logo{
     width: 240px;
     height: 68px;
 }
-.nav-menu{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 .content-search{
-    position: relative;
-    width: 220px;
-    height: 10px;
-    background-color: rgb(58, 13, 110);
-}
-.nav-search{
-    position: absolute;;
-    border-radius: 40px;
-    background-color: rgb(58, 13, 110);
-    
+    position:relative;
+    margin: 2% 0% 0% 0%;
 }
 .nav-area-search{
-    height: 50px;
+    position: relative;
+    top: 12px;
+    width: 160px;
+    padding: 4px;
+    background-color: #36055e;
+    border-radius: 50px;
+}
+#search{
+    position: relative;
+    width: 120px;
+    border-radius: 50px;
+    background-color: #36055e;
+    color: #ccc8c8;
+    padding: 4px;
+    margin:0px;
+    
 }
 .nav-button-search{
-    float: right;
-    margin: 0px;
-    padding: 0px;
-    color: #ffffff;
-    background-color: transparent;
-    border-radius:100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    position: absolute;
+    color: #ccc8c8;
+    right: -140px;
+    top: -12px;
 }
