--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="waiting-page" id="loading">
+    <section class="waiting-page" id="loading">
         <div class="cont-title" id="loading1">
             <p class="waiting-title">Hello and Welcomo to AnimeManiatics</p>
         </div>
@@ -31,10 +31,10 @@
                 </div>
             </div>
         </div>
-    </div>
-    <main class="content-first" id="contend">
+    </section>
+    <header class="content-first" id="contend">
         <div class="navbar-fixed" id="nav">
-            <nav class="purple darken-4 container-nav">
+            <nav class="purple darken-4 container-nav" id="nav">
                 <div class="nav-wrapper">
                     <a href="#" class="brand-logo">
                         <img src="/src/app/assets/img/title_proyect_c.png" class="nav-logo" alt="">
@@ -51,8 +51,8 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="#"><i class="material-icons">person</i></a></li>
-                        <li><a href="#"><i class="material-icons">brightness_6</i></a></li>
+                        <li><a href="#" class="waves-effect waves-light btn purple darken-4" id="btn-user"><i class="material-icons left">person</i>Login</a></li>
+                        <li><a href="#" class="waves-effect waves-light btn purple darken-4" id="btn-mode"><i class="material-icons">brightness_6</i></a></li>
                     </ul>
                 </div>
             </nav>
@@ -63,7 +63,7 @@
             <li><a href="#">Javascript</a></li>
             <li><a href="#">Mobile</a></li>
         </ul>
-    </main>
+    </header>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="/src/app/assets/js/functions.js"></script>
 </body>
