--- a/src/app/assets/css/style-main.css
+++ b/src/app/assets/css/style-main.css
@@ -73,30 +73,32 @@
 #mobile-demo > li > a{
     color: white;
 }
-/*.content-search1{
-    position:relative;
-    margin: 2% 0% 0% 0%;
+@media screen and (min-width: 800px){
+    .content-search{
+        position:relative;
+        margin: 2% 0% 0% 0%;
+    }
+    .nav-area-search{
+        position: relative;
+        top: 12px;
+        width: 160px;
+        padding: 4px;
+        background-color: #36055e;
+        border-radius: 50px;
+    }
+    #search{
+        position: relative;
+        width: 120px;
+        border-radius: 50px;
+        background-color: #36055e;
+        color: #ccc8c8;
+        padding: 4px;
+        margin:0px;
+        
+    }
+    .nav-button-search{
+        position: absolute;
+        right: -136px;
+        top: -12px;
+        display: inline;
 }
-.nav-area-search1{
-    position: relative;
-    top: 12px;
-    width: 160px;
-    padding: 4px;
-    background-color: #36055e;
-    border-radius: 50px;
-}
-#search1{
-    position: relative;
-    width: 120px;
-    border-radius: 50px;
-    background-color: #36055e;
-    color: #ccc8c8;
-    padding: 4px;
-    margin:0px;
-    
-}
-.nav-button-search1{
-    position: absolute;
-    right: -136px;
-    top: -12px;
-    display: inline;*/
