--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -42,7 +42,7 @@
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger right" id="button"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down nav-menu">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Anime repertoire</a></li>
+                        <li><a href="#">Anime repertorie</a></li>
                         <li>
                             <div class="content-search">
                                 <div class="input-field nav-area-search">
@@ -66,9 +66,10 @@
                     </div>
                 </div>
             </li>
-            <li><a href="#">Components</a></li>
-            <li><a href="#">Javascript</a></li>
-            <li><a href="#">Mobile</a></li>
+            <li><a href="#" class="waves-effect waves-light btn purple darken-4" id="btn-user"><i class="material-icons left">person</i>Login</a></li>
+                        <li><a href="#" class="waves-effect waves-light btn purple darken-4" id="btn-mode"><i class="material-icons">brightness_6</i></a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Anime repertorie</a></li>
         </ul>
     </header>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
