--- a/src/app/assets/css/style-main.css
+++ b/src/app/assets/css/style-main.css
@@ -1,6 +1,3 @@
-.content-first{
-    display: none;
-}
 .waiting-page{
     width: 100vw;
     height: 100vh;
@@ -22,9 +19,12 @@
 .waiting-loader{
     padding: 100px;
 }
+.content-first{
+    display: none;
+}
 .container-nav{
     padding: 0px 4% 0px 4%;
-    height: 12vh;
+    height: 72px;
 }
 .nav-logo{
     width: 240px;
@@ -56,7 +56,6 @@
     position: absolute;
     right: -136px;
     top: -12px;
-    display: inline;
 }
 #btn-user{
     border-radius: 10px;
@@ -79,6 +78,34 @@
 }
 #mobile-demo > li > a{
     color: white;
+    padding: 0px 20px;
+}
+#mobile-demo  li  .content-search{
+    position: relative;
+    margin: 0px 0px 20px 0px;
+}
+#mobile-demo  li  .nav-area-search{
+    position: relative;
+    width: 240px;
+    margin: 0px auto;
+    padding: 0px 0px;
+    background-color:  #36055e;
+    border-radius: 50px;
+}
+#mobile-demo  li #search{
+    position: relative;
+    width: 220px;
+    height: 36px;
+    font-size: 14px;
+    border-radius: 50px;
+    background-color: #36055e;
+    padding: 0px 10px;
+    margin:0px 0px;
+}
+#mobile-demo li .nav-button-search{
+    position: absolute;
+    right: -216px;
+    top: 8px;
 }
 .content-main{
     display: none;
@@ -97,7 +124,8 @@
     height: 160px;
     background-color: brown;
 }
-@media screen and (max-width:320px){
+/* media responsive for divices small */
+@media (min-width:100px) and (max-width:619px){
     .waiting-title{
         font-size: 2.5rem;
         font-family: 'Hind Siliguri', sans-serif;
@@ -106,7 +134,7 @@
     }
     .container-nav{
         padding: -100px;
-        height: 10vh;
+        height: 66px;
     }
     .nav-logo{
         width: 200px;
@@ -117,7 +145,8 @@
         background-color: aqua;
     }
 }
-@media screen and (max-width:620px){
+/* media responsive for divices medium */
+@media (min-width:620px) and (max-width:995px){
     .waiting-title{
         font-size: 2.5rem;
         font-family: 'Hind Siliguri', sans-serif;
@@ -134,5 +163,27 @@
     }
     #main{
         background-color: bisque;
+    }
+}
+
+/* media responsive for divices big  */
+@media (min-width:1440px) and (max-width:1880px){
+    .waiting-title{
+        font-size: 4.5rem;
+        font-family: 'Hind Siliguri', sans-serif;
+        color:rgb(111, 0, 255) ;
+        text-align: center;
+    }
+    .container-nav{
+        padding: 0px 40px;
+        height: 10vh;
+    }
+    .nav-logo{
+        width: 240px;
+        height: 80px;
+    }
+    #main{
+        background-color: #ff004c;
+        margin-top: 4vh;
     }
 }
