--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -46,7 +46,7 @@
                         <li>
                             <div class="content-search">
                                 <div class="input-field nav-area-search">
-                                    <input id="search" type="search" required class="" placeholder="Que buscas?">
+                                    <input id="search" type="search" required class="" placeholder="Search...">
                                     <label class="label-icon" for="search"><i class="material-icons nav-button-search">search</i></label>
                                 </div>
                             </div>
@@ -76,7 +76,16 @@
                 </div>
             </li>
             <li><a href="#" class="waves-effect waves-light btn purple darken-4" id="btn-user"><i class="material-icons left">person</i>Login</a></li>
-            <li><a href="#" class="waves-effect waves-light btn purple darken-4" id="btn-mode"><i class="material-icons">brightness_6</i></a></li>
+            <li>
+                <div class="switch mode">
+                    <label>
+                        off
+                        <input type="checkbox">
+                        <span class="lever" id="btn-mode"></span>
+                        on  
+                    </label>
+                </div>
+            </li>
             <li><a href="#">Home</a></li>
             <li><a href="#">Anime repertorie</a></li>
         </ul>
