--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- loader content -->
     <section class="waiting-page" id="loading">
         <div class="cont-title" id="loading1">
             <p class="waiting-title">Hello and Welcomo to AnimeManiatics</p>
@@ -32,6 +33,7 @@
             </div>
         </div>
     </section>
+    <!-- menu content -->
     <header class="content-first" id="contend">
         <div id="nav">
             <nav class="purple darken-4 container-nav">
@@ -75,7 +77,7 @@
                     </div>
                 </div>
             </li>
-            <li><a href="#" class="waves-effect waves-light btn purple darken-4" id="btn-user"><i class="material-icons left">person</i>Login</a></li>
+            <li><a href="#" class="waves-effect waves-light btn purple darken-4" id="btn-user"><i class="material-icons">person</i>Login</a></li>
             <li>
                 <div class="switch mode">
                     <label>
@@ -90,9 +92,11 @@
             <li><a href="#">Anime repertorie</a></li>
         </ul>
     </header>
+    <!-- main content -->
     <main class="content-main" id="main">
         
     </main>
+    <!-- footer the page -->
     <footer class="content-footer" id="footer">
 
     </footer>
