--- a/src/app/assets/css/style-main.css
+++ b/src/app/assets/css/style-main.css
@@ -72,8 +72,45 @@ body::-webkit-scrollbar-thumb:hover{
     margin: 6px;
     font-size: 10px;
 }
+#modallog{
+    width: 22em;
+    border-radius: 10px;
+    text-align: center;
+}
+#modallog h4{
+    font-size: 28px;
+    font-family: 'Hind Siliguri', sans-serif;
+    margin: 2px 10px;
+}
+#modallog .modal-content{
+    padding: 6px;
+}
+#modallog .modal-content input{
+    display: block;
+    width: 240px;
+    height: 2.5rem;
+    font-size: 14px;
+    margin: 8px auto;
+    box-shadow:none;
+}
+#modallog .modal-content input:focus-visible{
+    border-bottom: 1.5px solid purple;
+    box-shadow:1.5px solid purple;
+}
+#modallog .modal-content button{
+    display: block;
+    width: 240px;
+    height: 2.5rem;
+    border-radius: 4px;
+    margin: 8px auto;
+    border: none;
+}
+#modallog .modal-footer a{
+    font-size: 14px;
+    margin: 2px 6px;
+}
 .mode{
-    margin: 0px 6px;
+    margin: 0px 4px;
 }
 #btn-mode{
     background:#192842;
@@ -118,12 +155,20 @@ body::-webkit-scrollbar-thumb:hover{
     top: 8px;
 }
 #mobile-demo li #btn-user{
-    width: 140px;
+    width: 100px;
     height: 40px;
     border-radius: 10px;
-    margin: 0px auto;
+    margin: 10px auto;
+    margin-top: 10px;
     font-size: 12px;
-    padding: 0px 22px 0px 22px;
+    padding: 0px 10px;
+}
+#mobile-demo li #btn-user:active{
+    background-color: #9c9c9c;
+}
+#mobile-demo li #btn-user i{
+    margin: 0px;
+    color: #ffffff;
 }
 #mobile-demo li .mode{
     margin: 0px 20px;
