--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animemaniatics-main</title>
+    <link rel="shortcut icon" href="/src/app/assets/img/favicon-v1.5.png" type="image/x-icon">
     <link rel="stylesheet" href="/src/app/assets/css/style-main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -45,8 +46,8 @@
                         <i class="material-icons">menu</i>
                     </a>
                     <ul class="right hide-on-med-and-down nav-menu">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Anime repertorie</a></li>
+                        <li><a href="#" class="text-menu">Home</a></li>
+                        <li><a href="#" class="text-menu">Anime repertorie</a></li>
                         <li>
                             <div class="content-search">
                                 <div class="input-field nav-area-search">
@@ -108,7 +109,7 @@
         </ul>
         <!-- modal register -->
             <div id="modallog" class="modal">
-                    <h4>Log In</h4>
+                    <p class="title-modal">Log In</p>
                     <div class="divider"></div>
                     <div class="modal-content">
                         <label for="">
@@ -118,7 +119,7 @@
                             <input type="password" placeholder="Password">
                         </label>
                         <button type="submit">Log In</button>
-                        <button type="submit">Log In with Facebook</button>
+                        <button type="submit" class="facebook">Log In with Facebook</button>
                     </div>
                 <div class="modal-footer">
                     <a href="#">Register</a>
