--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -37,7 +37,7 @@
     <!-- menu content -->
     <header class="content-first" id="contend">
         <div id="nav">
-            <nav class="purple darken-4 container-nav">
+            <nav class="deep-purple darken-4 container-nav">
                 <div class="nav-wrapper">
                     <a href="#" class="brand-logo">
                         <img src="/src/app/assets/img/title_proyect_c.png" class="nav-logo" alt="">
@@ -51,7 +51,7 @@
                         <li>
                             <div class="content-search">
                                 <div class="input-field nav-area-search">
-                                    <input id="search" type="search" required class="" placeholder="Search...">
+                                    <input id="search" type="search" class="" placeholder="Search..." maxlength="30">
                                     <label class="label-icon" for="search">
                                         <i class="material-icons nav-button-search">search</i>
                                     </label>
@@ -59,7 +59,7 @@
                             </div>
                         </li>
                         <li>
-                            <a href="#modallog" class="waves-effect waves-light btn modal-trigger purple darken-4" id="btn-user">
+                            <a href="#modallog" class="waves-effect waves-light btn modal-trigger deep-purple darken-3" id="btn-user">
                                 <i class="material-icons left">person</i>Login
                             </a>
                         </li>
@@ -82,7 +82,7 @@
             <li>
                 <div class="content-search">
                     <div class="input-field nav-area-search">
-                        <input id="search" type="search" required placeholder="Search...">
+                        <input id="search" type="search" placeholder="Search..." maxlength="30">
                         <label class="label-icon" for="search">
                             <i class="material-icons nav-button-search">search</i>
                         </label>
@@ -90,7 +90,7 @@
                 </div>
             </li>
             <li>
-                <a href="#modallog" class="waves-effect waves-light btn modal-trigger purple darken-4" id="btn-user">
+                <a href="#modallog" class="waves-effect waves-light btn modal-trigger deep-purple darken-3" id="btn-user">
                     <i class="material-icons">person</i>Login
                 </a>
             </li>
@@ -130,7 +130,27 @@
     </header>
     <!-- main content -->
     <main class="content-main" id="main">
-        
+        <section class="content-anime">
+            <h6 class="anime-title">New´s Anime</h6>
+            <article class="anime-content-item1">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </article>
+        </section>
+        <section class="content-anime1">
+            <h6 class="anime-title">Popular´s Anime</h6>
+            <article class="anime-content-item2">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </article>
+        </section>
     </main>
     <!-- footer the page -->
     <footer class="content-footer" id="footer">
