--- a/src/app/assets/css/style-main.css
+++ b/src/app/assets/css/style-main.css
@@ -9,6 +9,10 @@ body::-webkit-scrollbar-thumb{
 body::-webkit-scrollbar-thumb:hover{
     background-color: #7e7e7e;
 }
+/* style to the body */
+body{
+    background-image: #dbdbdb;
+}
 /* style to the content loader */
 .waiting-page{
     width: 100vw;
@@ -25,7 +29,7 @@ body::-webkit-scrollbar-thumb:hover{
 .waiting-title{
     font-size: 4rem;
     font-family: 'Hind Siliguri', sans-serif;
-    color:rgb(111, 0, 255) ;
+    color:#311b92;
     text-align: center;
 }
 .waiting-loader{
@@ -60,14 +64,14 @@ body::-webkit-scrollbar-thumb:hover{
     top: 12px;
     width: 160px;
     padding: 4px;
-    background-color: #36055e;
+    background-color: #1f125c;
     border-radius: 50px;
 }
 #search{
     position: relative;
     width: 120px;
     border-radius: 50px;
-    background-color: #36055e;
+    background-color: #1f125c;
     color: #ccc8c8;
     padding: 4px;
     margin:0px;
@@ -87,7 +91,7 @@ body::-webkit-scrollbar-thumb:hover{
     margin: 0px 4px;
 }
 #btn-mode{
-    background:#192842;
+    background:#17243b;
     margin: 0px;
 }
 #btn-mode::after{
@@ -142,7 +146,7 @@ body::-webkit-scrollbar-thumb:hover{
 }
 /* style to the nav-menu-mobile */
 #mobile-demo{
-    background-color: #47228b;
+    background-color: #311b92;
     width: 260px;
 }
 #mobile-demo > li > a{
@@ -158,7 +162,7 @@ body::-webkit-scrollbar-thumb:hover{
     width: 240px;
     margin: 0px auto;
     padding: 0px 0px;
-    background-color:  #36055e;
+    background-color:  #1f125c;
     border-radius: 50px;
 }
 #mobile-demo  li #search{
@@ -167,7 +171,7 @@ body::-webkit-scrollbar-thumb:hover{
     height: 36px;
     font-size: 14px;
     border-radius: 50px;
-    background-color: #36055e;
+    background-color: #1f125c;
     padding: 0px 10px;
     margin:0px 0px;
 }
@@ -203,19 +207,58 @@ body::-webkit-scrollbar-thumb:hover{
     display: none;
 }
 #main{
-    width: 100%;
-    height: 88vh;
-    background: green;
+    width: 96vw;
+    height: 300vh;
+    margin: 0px auto;
     margin-top: 2vh;
+    display: grid;
+    grid-template-columns: 18fr;
+    grid-template-rows: 6fr 12fr;
+    gap: 10px;
 }
-/* style to the content menu */
+.content-anime{
+    grid-column: 1/-1;
+    grid-row: 1/2;
+}
+.content-anime1{
+    grid-column: 1/-1;
+    grid-row: 2/-1;
+}
+.anime-title{
+    display: block;
+    font-size: 2rem;
+    color: #9c9c9c;
+    font-family:sans-serif;
+}
+.anime-content-item1{
+    width: 100%;
+    height: 96%;
+    display: grid;
+    grid-template-columns: repeat(4,220px);
+    grid-template-rows: repeat(3,160px);
+    gap: 5px;
+}
+.anime-content-item2{
+    width: 100%;
+    height: 96%;
+    display: grid;
+    grid-template-columns: repeat(4, 240px);
+    grid-template-rows: repeat(4,280px);
+    gap: 5px;
+}
+.item{
+    width: 100%;
+    height: 100%;
+    background-color: #ff004c;
+}
+/* style to the content footer */
 .content-footer{
     display: none;
 }
 #footer{
     width: 100%;
-    height: 160px;
-    background-color: brown;
+    height: 100px;
+    background-color: #462bc0;
 }
 /* media responsive for divices small */
 @media (min-width:100px) and (max-width:500px){
