--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -130,27 +130,33 @@
     </header>
     <!-- main content -->
     <main class="content-main" id="main">
+        <aside class="aside-content1">
+
+        </aside>
         <section class="content-anime">
             <h6 class="anime-title">New´s Anime</h6>
             <article class="anime-content-item1">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
+                <div class="item1"></div>
             </article>
         </section>
         <section class="content-anime1">
             <h6 class="anime-title">Popular´s Anime</h6>
             <article class="anime-content-item2">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
+                <div class="item2"></div>
             </article>
         </section>
+        <aside class="aside-content2">
+
+        </aside>
     </main>
     <!-- footer the page -->
     <footer class="content-footer" id="footer">
