--- a/src/app/assets/css/style-main.css
+++ b/src/app/assets/css/style-main.css
@@ -49,7 +49,7 @@ body{
     height: 68px;
 }
 #nav .nav-wrapper ul li .text-menu{
-    font-size: 16px;
+    font-size: 1.1em;
 }
 #nav .nav-wrapper ul li .text-menu:hover{
     background-color: transparent;
@@ -207,21 +207,23 @@ body{
     display: none;
 }
 #main{
-    width: 96vw;
-    height: 300vh;
-    margin: 0px auto;
+    width: 100%;
     margin-top: 2vh;
     display: grid;
-    grid-template-columns: 18fr;
-    grid-template-rows: 6fr 12fr;
+    grid-template-columns: 3fr 9fr;
+    grid-template-rows: 4fr 8fr;
     gap: 10px;
 }
+.aside-content1{
+    grid-column: 1/2;
+    grid-row: 1/-1;
+}
 .content-anime{
-    grid-column: 1/-1;
+    grid-column: 2/-1;
     grid-row: 1/2;
 }
 .content-anime1{
-    grid-column: 1/-1;
+    grid-column: 2/-1;
     grid-row: 2/-1;
 }
 .anime-title{
@@ -231,25 +233,27 @@ body{
     font-family:sans-serif;
 }
 .anime-content-item1{
-    width: 100%;
-    height: 96%;
     display: grid;
-    grid-template-columns: repeat(4,220px);
-    grid-template-rows: repeat(3,160px);
-    gap: 5px;
+    grid-template-columns: repeat(auto-fit,auto);
+    gap: 20px;
 }
 .anime-content-item2{
-    width: 100%;
-    height: 96%;
+    width: 98%;
+    height: 98%;
     display: grid;
-    grid-template-columns: repeat(4, 240px);
-    grid-template-rows: repeat(4,280px);
-    gap: 5px;
+    grid-template-columns: repeat(4,minmax(220px,1fr));
+    grid-template-rows: repeat(auto-fill,minmax(300px,1fr));
+    gap: 20px;
 }
-.item{
-    width: 100%;
-    height: 100%;
+.item1{
+    width: 220px;
+    height: 160px;
     background-color: #ff004c;
+}
+.item2{
+    width: 220px;
+    height: 300px;
+    background-color: #00f7ff;
 }
 /* style to the content footer */
 .content-footer{
